[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/UI/Assets/BoxStyle.tres" type="StyleBox" id=1]
[ext_resource path="res://Entities/UI/DialogBox/DialogBox.gd" type="Script" id=2]
[ext_resource path="res://Entities/UI/DialogBox/DefaultDialogVoice.wav" type="AudioStream" id=3]



[node name="DialogBox" type="Panel"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 300 )
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -100.0
margin_right = -50.0
margin_bottom = 100.0
bbcode_enabled = true
bbcode_text = "Hello I am  the text box for foley."
text = "Hello I am  the text box for foley."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="dialog_completed" from="." to="." method="_on_DialogBox_dialog_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
